# Lab7

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: release.yml
